[gd_scene load_steps=8 format=3 uid="uid://ymmj8d0ppy7e"]

[ext_resource type="Script" path="res://Assets/Scripts/Utilities/Check_Points/check_point.gd" id="1_nbqd7"]
[ext_resource type="SpriteFrames" uid="uid://crpy4aiv7tye7" path="res://Assets/Animate/Item/Check_points.tres" id="1_x1e5h"]
[ext_resource type="AudioStream" uid="uid://bknlmcfk318ti" path="res://Assets/Music/SFX/Check_Point/Check_point.wav" id="2_l0egi"]

[sub_resource type="Animation" id="Animation_q7y7p"]
resource_name = "Iddle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Iddle"]
}

[sub_resource type="Animation" id="Animation_p1lj5"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769231, 0.153846, 0.230769, 0.307692, 0.384615, 0.461538, 0.538462, 0.615385, 0.692308, 0.769231, 0.846154, 0.923077, 1, 1.07692, 1.15385, 1.23077, 1.30769, 1.38462, 1.46154, 1.53846, 1.61538, 1.69231, 1.76923, 1.84615, 1.92308),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qxxlv"]
_data = {
"Iddle": SubResource("Animation_q7y7p"),
"default": SubResource("Animation_p1lj5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_av5sl"]
size = Vector2(92.5, 220.5)

[node name="Check_Point" type="Area2D"]
collision_layer = 4
collision_mask = 2
monitoring = false
monitorable = false
script = ExtResource("1_nbqd7")

[node name="Check_points_Spirites" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.364)
sprite_frames = ExtResource("1_x1e5h")
centered = false
offset = Vector2(0, -612)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Check_points_Spirites"]
libraries = {
"": SubResource("AnimationLibrary_qxxlv")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(44.25, -111.25)
shape = SubResource("RectangleShape2D_av5sl")
debug_color = Color(0.823529, 0.25098, 0.223529, 0.419608)

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_l0egi")
bus = &"Sound_Effect"
area_mask = 8192

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(5, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="SFX" to="." method="_on_sfx_finished"]
